# dante-norton

./: PLAN.md  PRIOR_WORK.md  README.md  pyproject.toml
alignment/: ALGORITHM.md  README.md  align_canto.py
dante_norton/: README.md  __init__.py  llm.py  parser.py  utils.py
en-norton/: Makefile  README.md  split.py
it/: .gitignore  Makefile  README.md  split.py
tokenize/: .gitignore  Makefile  README.md  quote_cases.txt  quote_cases_converted.txt  tokenizer.py
