[project]
name = "dante_norton"
version = "0.1.0"
description = "Norton's Dante translation aligned with Italian original"
readme = "README.md"
repository = "https://github.com/7shi/dante-norton"
requires-python = ">=3.13"
dependencies = [
    "llm7shi",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dante_norton"]

[tool.hatch.build.targets.sdist]
include = [
    "dante_norton",
]
